[package]
name = "misc_tools"
version = "0.1.0"
authors = ["ccsplit <cshay237@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dns-lookup = "1.0.1"
ipnet = "2.1.0"
log = "0.4"
reqwest = "0.9.19"
simplelog = "0.6.0"
threadpool = "1.7.1"

[[bin]]
name = "check_urls"
path = "src/check_urls.rs"

[[bin]]
name = "ip_hostname"
path = "src/ip_hostname.rs"
