[package]
name = "misc_tools"
version = "0.1.0"
authors = ["ccsplit <cshay237@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dns-lookup = "1.0.5"
futures = "0.3"
ipnet = "2.3.0"
log = "0.4.11"
reqwest = "0.10.8"
simplelog = "0.8.0"
threadpool = "1.8.1"
tokio = "0.2.22"

[[bin]]
name = "check_urls"
path = "src/check_urls.rs"

[[bin]]
name = "ip_hostname"
path = "src/ip_hostname.rs"
